--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 PORT=1337
-MONGO_URI=mongodb://localhost:27017/nestjsauth
-JWT_KEY=jwt_awesome_key
+MONGO_URI=mongodb+srv://jesusfb:Dove3229-@cluster0.yx9sjqo.mongodb.net/nestjsauth
+JWT_KEY=3750b495-b382-4905-89b9-ebe440d7dee3
